jlamontSC-test/src/objects/Survey_Answer__c.object
<CustomObject>
    <description>Stores the individual survey answers</description>
    <fields>
        <fullName>Answer_Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox/boolean storage of the answer.</description>
        <label>Answer Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Currency__c</fullName>
        <description>The Currency version of the Answer</description>
        <label>Answer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Answer_Date__c</fullName>
        <description>Answer stored in a Date format</description>
        <label>Answer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer_Email__c</fullName>
        <description>The Email version of the answer</description>
        <label>Answer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Answer_Long_Text__c</fullName>
        <description>The Long Text version of the answer.</description>
        <label>Answer Long Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Numeric__c</fullName>
        <label>Answer Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Stores the 255 Text version of the full answer.  In many cases this field is truncated.</description>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The text of the FormAssembly Question.</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <description>The Parent form that submitted this survey question answer.</description>
        <label>Survey Response</label>
        <referenceTo>Survey_Response__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Survey_Response__c</columns>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Answer_Boolean__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000000000}</displayFormat>
        <label>Survey Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>